--- a/GameClient/GameEngine/GameEngine.vcproj
+++ b/GameClient/GameEngine/GameEngine.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="../../Public"
+				AdditionalIncludeDirectories="../../Public;DXUT\Core"
 				PreprocessorDefinitions="WIN32;_DEBUG;_LIB"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -263,6 +263,134 @@
 				RelativePath=".\Event_Define.h"
 				>
 			</File>
+		</Filter>
+		<Filter
+			Name="DXUT"
+			>
+			<Filter
+				Name="Core"
+				>
+				<File
+					RelativePath=".\DXUT\Core\DXUT.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Core\DXUT.h"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Core\DXUTenum.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Core\DXUTenum.h"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Core\DXUTmisc.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Core\DXUTmisc.h"
+					>
+				</File>
+			</Filter>
+			<Filter
+				Name="Optional"
+				>
+				<File
+					RelativePath=".\DXUT\Optional\DXUTcamera.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\DXUTcamera.h"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\DXUTgui.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\DXUTgui.h"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\DXUTguiIME.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\DXUTguiIME.h"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\DXUTLockFreePipe.h"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\DXUTres.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\DXUTres.h"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\DXUTsettingsdlg.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\DXUTsettingsdlg.h"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\DXUTShapes.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\DXUTShapes.h"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\ImeUi.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\ImeUi.h"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\SDKmesh.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\SDKmesh.h"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\SDKmisc.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\SDKmisc.h"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\SDKsound.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\SDKsound.h"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\SDKwavefile.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\DXUT\Optional\SDKwavefile.h"
+					>
+				</File>
+			</Filter>
 		</Filter>
 		<File
 			RelativePath=".\GameEngine.cpp"
