--- a/GameClient/GameEngine/GameEngine.vcproj
+++ b/GameClient/GameEngine/GameEngine.vcproj
@@ -284,6 +284,10 @@
 				RelativePath="..\..\Public\Event\Event_Define.h"
 				>
 			</File>
+			<File
+				RelativePath=".\RenderSystem_Define.h"
+				>
+			</File>
 		</Filter>
 		<Filter
 			Name="DXUT"
