--- a/GameClient/Game/Game.vcproj
+++ b/GameClient/Game/Game.vcproj
@@ -61,7 +61,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="../Bin/$(ConfigurationName)/GameEngine.lib d3d9.lib"
+				AdditionalDependencies="../Bin/$(ConfigurationName)/GameEngine.lib d3d9.lib d3dx9.lib winmm.lib"
 				LinkIncremental="2"
 				GenerateDebugInformation="true"
 				SubSystem="2"
