--- a/GameServer/GameServerEngine/GameServerEngine.vcproj
+++ b/GameServer/GameServerEngine/GameServerEngine.vcproj
@@ -41,6 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
+				AdditionalIncludeDirectories="../../Public"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;GAMESERVERENGINE_EXPORTS"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
